@@ -107,6 +107,7 @@ GHashTable *ship_list;
 GHashTable *target_list;
 GHashTable *fleet_list;
 GSList *minefield_list;
+GSList *storm_list;
 
 /* Specs */
 GSList *hullspec_list;
