@@ -17,6 +17,7 @@
  *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  */
 
+#include "game_state.h"
 #include "gwp-object.h"
 #include "gwp-minefield.h"
 
@@ -114,7 +115,8 @@ gboolean gwp_minefield_is_valid (GwpMinefield *self)
 {
   g_assert (GWP_IS_MINEFIELD(self));
 
-  if (gwp_minefield_get_radius(self) > 0) {
+  if (gwp_minefield_get_radius(self) > 0 &&
+      gwp_object_valid_coords(GWP_OBJECT(self))) {
     return TRUE;
   } else {
     return FALSE;
@@ -131,7 +133,9 @@ gboolean gwp_minefield_is_mine(GwpMinefield *self)
 {
   g_assert(GWP_IS_MINEFIELD(self));
 
-  if(gwp_minefield_get_owner(self) == game_get_race(game_state)) {
+  if(gwp_minefield_get_owner(self) == game_get_race(game_state) ||
+     (gwp_minefield_get_owner(self) == 12 &&
+      game_get_race(game_state) == RACE_CRYSTALLINE)) {
     return TRUE;
   } else {
     return FALSE;
