@@ -7,6 +7,8 @@ Version ?.?.?? (released ??-??-????):
 	* Developers documentation generated using doxygen.
 
 	* Basic minefield visualization.
+
+	* Basic ion storm visualization.
 	
 Version 0.2.11 (released 03-15-2004):
 
